AUT-5322: Pass bearer token through PasskeysDeleteProxyHandler and PasskeysRetrieveProxyHandler